Add convert from trl.xml into po files to update-to-3.9 script

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "koala-framework/kwf-upgrade",
     "description": "Scripts to upgrade Koala-Framework-Websites to newer version",
     "require": {
-        "nikic/php-parser": "1.0.2"
+        "nikic/php-parser": "1.0.2",
+        "symfony/console": "~2.6",
+        "sepia/po-parser": "4.2.*"
     },
     "license": "BSD-2-Clause"
 }
